--- a/cookbook.html
+++ b/cookbook.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Recipe Blackboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="css/recipes.css" />
+  <link rel="stylesheet" href="css/cookbook.css" />
 </head>
 <body>
   <div class="blackboard">
