--- a/cookbook.html
+++ b/cookbook.html
@@ -21,19 +21,17 @@
     <div class="recipe-book">
       <div class="book-content">
         <!-- Pages injected by JS -->
-        
-        <!-- Spine (embossed gold title) -->
-        <div class="spine">
-          <span>RECIPES</span>
-        </div>
-        
-        <!-- Stacked-page edges top/bottom -->
+
+        <!-- Spine -->
+        <div class="spine"><span>RECIPES</span></div>
+
+        <!-- Top and Bottom stacked edges -->
         <div class="top-stack"></div>
         <div class="bottom-stack"></div>
       </div>
     </div>
 
-    <!-- Navigation buttons (kept OUTSIDE the book) -->
+    <!-- Navigation buttons OUTSIDE book -->
     <div class="nav-buttons">
       <button id="prevBtn">‹</button>
       <button id="nextBtn">›</button>
