--- a/cookbook.html
+++ b/cookbook.html
@@ -4,34 +4,35 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Recipe Blackboard</title>
-  
+
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet" />
-  
+
   <!-- CSS -->
   <link rel="stylesheet" href="css/cookbook.css" />
 </head>
 <body>
   <div class="blackboard">
+    <!-- Home Link -->
     <a href="index.html" class="home-button" aria-label="Home">Home</a>
     <h1>Recipes</h1>
 
     <!-- Book container -->
     <div class="recipe-book">
       <div class="book-content">
-        <!-- Pages injected by JS -->
-
-        <!-- Spine -->
+        <!-- Book Spine -->
         <div class="spine"><span>RECIPES</span></div>
 
-        <!-- Top and Bottom stacked edges -->
+        <!-- Top and Bottom edges -->
         <div class="top-stack"></div>
         <div class="bottom-stack"></div>
+
+        <!-- Pages injected by JS -->
       </div>
     </div>
 
-    <!-- Navigation buttons OUTSIDE book -->
+    <!-- Navigation buttons (outside book) -->
     <div class="nav-buttons">
       <button id="prevBtn">‹</button>
       <button id="nextBtn">›</button>
