--- a/cookbook.html
+++ b/cookbook.html
@@ -14,8 +14,8 @@
 </head>
 <body>
   <div class="blackboard">
-    <!-- Home Link -->
-    <a href="index.html" class="home-button" aria-label="Home">Home</a>
+    <!-- Back Link -->
+    <a href="recipe.html" class="back-button" aria-label="Back">Back</a>
     <h1>Recipes</h1>
 
     <!-- Book container -->
