--- a/pictures.html
+++ b/pictures.html
@@ -32,7 +32,7 @@
         <!-- Picture Item 1 -->
         <div class="picture-item">
           <img src="images/image1.jpg" alt="Sunset" id="img1" class="preview-img">
-          <p class="caption">Sunset</p>
+          <p class="caption">Sky Meets Earth</p>
         </div>
         <!-- Picture Item 2 -->
         <div class="picture-item">
@@ -119,6 +119,7 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
