--- a/pictures.html
+++ b/pictures.html
@@ -37,37 +37,37 @@
         <!-- Picture Item 2 -->
         <div class="picture-item">
           <img src="images/image2.jpg" alt="Beach" id="img2" class="preview-img">
-          <p class="caption">Beach</p>
+          <p class="caption">Not Death Bringing</p>
         </div>
         <!-- Picture Item 3 -->
         <div class="picture-item">
           <img src="images/image3.jpg" alt="Cityscape" id="img3" class="preview-img">
-          <p class="caption">Cityscape</p>
+          <p class="caption">Plum Peach Apricot</p>
         </div>
         <!-- Picture Item 4 -->
         <div class="picture-item">
           <img src="images/image4.jpg" alt="Cityscape" id="img4" class="preview-img">
-          <p class="caption">Cityscape</p>
+          <p class="caption">Toy for many</p>
         </div>
         <!-- Picture Item 5 -->
         <div class="picture-item">
           <img src="images/image5.jpg" alt="Forest" id="img5" class="preview-img">
-          <p class="caption">Forest</p>
+          <p class="caption">Peace</p>
         </div>
         <!-- Picture Item 6 -->
         <div class="picture-item">
           <img src="images/image6.jpg" alt="Lake" id="img6" class="preview-img">
-          <p class="caption">Lake</p>
+          <p class="caption">Rain Leech</p>
         </div>
         <!-- Picture Item 7 -->
         <div class="picture-item">
           <img src="images/image7.jpg" alt="Mountain" id="img7" class="preview-img">
-          <p class="caption">Mountain</p>
+          <p class="caption">Almora</p>
         </div>
         <!-- Picture Item 8 -->
         <div class="picture-item">
           <img src="images/image8.jpg" alt="River" id="img8" class="preview-img">
-          <p class="caption">River</p>
+          <p class="caption">...</p>
         </div>
         <!-- Picture Item 9 -->
         <div class="picture-item">
@@ -119,6 +119,7 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
