--- a/pictures.html
+++ b/pictures.html
@@ -72,27 +72,27 @@
         <!-- Picture Item 9 -->
         <div class="picture-item">
           <img src="images/image9.jpg" alt="Waterfall" id="img9" class="preview-img">
-          <p class="caption">Waterfall</p>
+          <p class="caption">Skyfall</p>
         </div>
         <!-- Picture Item 10 -->
         <div class="picture-item">
           <img src="images/image10.jpg" alt="Desert" id="img10" class="preview-img">
-          <p class="caption">Desert</p>
+          <p class="caption">Sukoon</p>
         </div>
         <!-- Picture Item 11 -->
         <div class="picture-item">
           <img src="images/image11.jpg" alt="Valley" id="img11" class="preview-img">
-          <p class="caption">Valley</p>
+          <p class="caption">Two Storey</p>
         </div>
         <!-- Picture Item 12 -->
         <div class="picture-item">
           <img src="images/image12.jpg" alt="Meadow" id="img12" class="preview-img">
-          <p class="caption">Meadow</p>
+          <p class="caption">Tiger</p>
         </div>
         <!-- Picture Item 13 -->
         <div class="picture-item">
           <img src="images/image13.jpg" alt="Mountain Lake" id="img13" class="preview-img">
-          <p class="caption">Mountain Lake</p>
+          <p class="caption">Flame</p>
         </div>
       </div>
 
@@ -119,6 +119,7 @@
   <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
