--- a/recipe.html
+++ b/recipe.html
@@ -19,7 +19,7 @@
         <a href="cookbook.html#spaghetti-carbonara">Spaghetti Carbonara</a>
       </div>
       <div class="recipe-item">
-        <a href="cookbook.html#chocolate-chip-cookies">Chocolate Chip Cookies</a>
+        <a href="cookbook.html#Paasi Paaruppu Payasam(Moong Dal Paysam)">Paasi Paaruppu Payasam(Moong Dal Paysam)</a>
       </div>
       <div class="recipe-item">
         <a href="cookbook.html#lemon-garlic-roast-chicken">Lemon Garlic Roast Chicken</a>
@@ -40,3 +40,4 @@
   </div>
 </body>
 </html>
+
