--- a/recipe.html
+++ b/recipe.html
@@ -19,7 +19,7 @@
         <a href="cookbook.html#spaghetti-carbonara">Spaghetti Carbonara</a>
       </div>
       <div class="recipe-item">
-        <a href="cookbook.html#Paasi Paaruppu Payasam(Moong Dal Payasam)">Paasi Paaruppu Payasam(Moong Dal Payasam)</a>
+        <a href="cookbook.html#Paasi Paruppu Payasam (Moong Dal Payasam)">Paasi Paruppu Payasam (Moong Dal Payasam)</a>
       </div>
       <div class="recipe-item">
         <a href="cookbook.html#lemon-garlic-roast-chicken">Lemon Garlic Roast Chicken</a>
@@ -40,5 +40,6 @@
   </div>
 </body>
 </html>
+
 
 
