--- a/cookbook.html
+++ b/cookbook.html
@@ -31,7 +31,11 @@
         <!-- Pages injected by JS -->
       </div>
     </div>
-
+    
+ <!-- ✅ New shadow element -->
+      <div class="recipe-book-shadow"></div>
+    </div>
+  
     <!-- Navigation buttons (outside book) -->
     <div class="nav-buttons">
       <button id="prevBtn">‹</button>
